# audiovisualizer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle  build.sh  gradle.properties  gradlew  gradlew.bat  quickfix.sh  settings.gradle
.github/workflows/: android-build.yml  android-ci.yml  android.yml  build.yml
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/audiovisualizer/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yusdesign/audiovisualizer/: MainActivity.java  VisualizerView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
src/: lib.rs
