[package]
name = "audiovisualizer"
version = "0.1.0"
edition = "2021"
description = "Universal audio visualizer with perceptual color mapping"
license = "MIT"
authors = ["yusdesign <swiftcase@gmail.com>"]
repository = "https://github.com/yusdesign/audiovisualizer"

[lib]
name = "audiovisualizer"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
