[package]
name = "audiovisualizer"
version = "0.1.0"
edition = "2021"
description = "Universal audio visualizer with LAB-inspired perceptual color mapping"
license = "MIT"
authors = ["yusdesign <swiftcase@gmail.com>"]
repository = "https://github.com/yusdesign/audiovisualizer"
readme = "README.md"
keywords = ["audio", "visualization", "color-theory", "android", "psychoacoustics"]
categories = ["multimedia", "visualization"]

[lib]
name = "audiovisualizer"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"

# Optional future dependencies (commented out for now)
# rustfft = "6.1"  # For real FFT analysis
# cpal = "0.15"   # For audio input
# serde = { version = "1.0", features = ["derive"] }  # For JSON parsing

[features]
default = ["research-mode"]
research-mode = []  # Preserves LAB color research structure
fft-analysis = []   # Future: Enable real FFT processing
real-time = []      # Future: Enable real-time audio input
